add back styles for event name

--- a/index.html
+++ b/index.html
@@ -130,14 +130,12 @@
 
     }
 
-    /* .event-name { */
-    /*   bottom: 2.5%; */
-    /*   width: 100%; */
-    /*   text-align: center; */
-    /*   color: var(--text-color); */
-    /*   font-family: 'Inter'; */
-    /*   font-weight: 500; */
-    /* } */
+    .event-name {
+      bottom: 2.5%;
+      width: 100%;
+      text-align: center;
+      color: var(--text-color);
+    }
 
     #crop-modal {
       display: none;
