--- a/konfigurator.html
+++ b/konfigurator.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>create-ssam</title>
-    <link rel="preconnect" href="https://fonts.bunny.net">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cropperjs@1.6.2/dist/cropper.min.css">
+    <meta name="viewport" content="width=djevice-width, initial-scale=1.0" />
+    <title>MRMCD 2025 Visual Gen</title>
     <style>
     :root{
       --image: url("/placeholder.jpg");
@@ -144,37 +142,42 @@
       fill: var(--text-color);
     }
 
-    #crop-modal {
-      display: none;
-      position: fixed;
-      z-index: 20;
-      top: 0;
-      left: 0;
-      width: 100%;
+    #crop-modal { 
+      display: none; 
+      position: fixed; 
+      z-index: 20; 
+      top: 0; 
+      left: 0; 
+      width: 100%; 
+      height: 100%; 
+      background: rgba(0,0,0,0.8); 
+    } 
+
+    #crop-container { 
+      background: white; 
+      padding: 20px; 
+      margin: 10vh 10vw; 
+      height: 80vh;
+      width: 80vw;
+      display: grid;
+      grid-template: 1fr auto / 1fr;
+      grid-gap: 3rem;
+    }
+
+    .croppie-container {
       height: 100%;
-      background: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
+      width: 100%;
     }
 
-    #crop-container {
-      background: white;
-      padding: 20px;
-    }
-
-    #crop-image {
-      max-width: 80vw;
-      max-height: 80vh;
-    }
-
-    #crop-button {
-      margin: 2rem auto 0;
-      background: #000;
-      color: #fff;
-      padding: 1rem;
-      border-radius: 1rem;
-      border: none;
-    }
+    #crop-button { 
+      margin: 2rem auto 0; 
+      background: #000; 
+      color: #fff; 
+      padding: 1rem; 
+      border-radius: 1rem; 
+      border: none; 
+      grid-row: 2;
+     } 
 
     </style>
   </head>
@@ -251,7 +254,6 @@
         <button id="crop-button">Crop</button>
       </div>
     </div>
-      <script src="https://cdn.jsdelivr.net/npm/cropperjs@1.6.2/dist/cropper.min.js"></script>
       <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
