--- a/konfigurator/index.html
+++ b/konfigurator/index.html
@@ -254,6 +254,6 @@
         <button id="crop-button">Crop</button>
       </div>
     </div>
-      <script type="module" src="./src/index.ts"></script>
+      <script type="module" src="../src/index.ts"></script>
   </body>
 </html>
