add font preload, remove obsolete dependency

--- a/konfigurator/index.html
+++ b/konfigurator/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" as="font" href="/Inter-Medium.woff2">
     <title>MRMCD 2025 Visual Gen</title>
     <style>
     :root{
