--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <br>
           Proceed at the risk of slow internet for the rest of the month!
         </p>
-        <a href="/konfigurator/">
+        <a href="./konfigurator.html">
           Accept and proceed
         </a>
       </div>
